# advent-of-code

./: .gitignore
2021/01/: Main.hs
2022/01/: Main.hs  aoc.cabal
2022/02/: Main.hs
2022/03/: Main.hs
2022/04/: Main.hs
2022/05/: Main.hs
2022/06/: Main.hs
2022/07/: Main.hs
2022/08/: Main.hs  cases.txt
2022/09/: Main.hs
2022/10/: Main.hs  aoc.cabal
2022/11/: Main.hs  Part1.hs  aoc.cabal
2022/12/: Main.hs  aoc.cabal
2022/13/: Main.hs
2022/14/: Main.hs  aoc.cabal
2022/15/: Main.hs  Part1.hs
2022/17/: Main.hs  Part1.hs  aoc.cabal
2022/18/: Main.hs
2022/20/: Part1.hs
2022/21/: Main.hs  aoc.cabal
