cabal-version:      2.4
name:               aoc
version:            0.1.0.0

executable aoc
    main-is:          Main.hs
    build-depends:
        base,
        containers,
        unordered-containers,
        attoparsec,
        text,
        range,
        pointedlist
    default-language: Haskell2010
